Qualifier round done

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="card_back" id="qc1">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_1_1">
-                            <span class="name1" id="tpn_1_1">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_1">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t1_1" onfocusout="focus_out(t1_1,t4_1,'qc1')">
@@ -120,7 +120,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_4_1">
-                            <span class="name1" id="tpn_2_6">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_6">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                     <div class="card_back" id="qc2">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_1_2">
-                            <span class="name1" id="tpn_1_2">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_2">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t1_2" onfocusout="focus_out(t1_2,t3_2,'qc2')">
@@ -137,7 +137,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_3_2">
-                            <span class="name1" id="tpn_2_1">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_1">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="card_back" id="qc3">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_1_3">
-                            <span class="name1" id="tpn_1_3">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_3">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t1_3" onfocusout="focus_out(t1_3,t5_3,'qc3')">
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_5_3">
-                            <span class="name1" id="tpn_3_2">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_2">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     <div class="card_back" id="qc4">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_1_4">
-                            <span class="name1" id="tpn_1_4">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_4">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t1_4" onfocusout="focus_out(t1_4,t6_4,'qc4')">
@@ -171,7 +171,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_6_4">
-                            <span class="name1" id="tpn_3_5">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_5">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                     <div class="card_back" id="qc5">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_3_1">
-                            <span class="name1" id="tpn_2_2">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_2">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t3_1" onfocusout="focus_out(t3_1,t6_1,'qc5')">
@@ -191,7 +191,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_6_1">
-                            <span class="name1" id="tpn_3_6">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_6">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                     <div class="card_back" id="qc6">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_4_2">
-                            <span class="name1" id="tpn_2_7">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_7">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t4_2" onfocusout="focus_out(t4_2,t5_2,'qc6')">
@@ -208,7 +208,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_5_2">
-                            <span class="name1" id="tpn_3_3">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_3">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
                     <div class="card_back" id="qc7">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_6_3">
-                            <span class="name1" id="tpn_3_7">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_7">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t6_3" onfocusout="focus_out(t6_3,t4_3,'qc7')">
@@ -225,7 +225,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_4_3">
-                            <span class="name1" id="tpn_2_8">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_8">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                     <div class="card_back" id="qc8">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_5_4">
-                            <span class="name1" id="tpn_3_4">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_4">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t5_4" onfocusout="focus_out(t5_4,t3_4,'qc8')">
@@ -242,7 +242,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_3_4">
-                            <span class="name1" id="tpn_2_3">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_3">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                     <div class="card_back" id="qc9">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_5_1">
-                            <span class="name1" id="tpn_3_1">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_1">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t5_1" onfocusout="focus_out(t5_1,t2_1,'qc9')">
@@ -262,7 +262,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_2_1">
-                            <span class="name1" id="tpn_1_5">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_5">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -270,7 +270,7 @@
                     <div class="card_back" id="qc10">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_6_2">
-                            <span class="name1" id="tpn_3_8">Nasdfsme</span>
+                            <span class="name1" id="tpn_3_8">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t6_2" onfocusout="focus_out(t6_2,t2_2,'qc10')">
@@ -279,7 +279,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_2_2">
-                            <span class="name1" id="tpn_1_6">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_6">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -287,7 +287,7 @@
                     <div class="card_back" id="qc11">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_3_3">
-                            <span class="name1" id="tpn_2_4">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_4">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t3_3" onfocusout="focus_out(t3_3,t2_3,'qc11')">
@@ -296,7 +296,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_2_3">
-                            <span class="name1" id="tpn_1_7">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_7">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                     <div class="card_back" id="qc12">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real" id="tp_4_4">
-                            <span class="name1" id="tpn_2_5">Nasdfsme</span>
+                            <span class="name1" id="tpn_2_5">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="t4_4" onfocusout="focus_out(t4_4,t2_4,'qc12')">
@@ -313,7 +313,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca" id="tp_2_4">
-                            <span class="name1" id="tpn_1_8">Nasdfsme</span>
+                            <span class="name1" id="tpn_1_8">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -332,7 +332,7 @@
                     <div class="card_back" id="kc1">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="kt1_1" onfocusout="focus_out(kt1_1,kt2_1,'kc1')">
@@ -341,7 +341,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -349,7 +349,7 @@
                     <div class="card_back" id="kc2">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="kt2_2" onfocusout="focus_out(kt2_2,kt3_1,'kc2')">
@@ -358,7 +358,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -366,7 +366,7 @@
                     <div class="card_back" id="kc3">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T1" id="kt3_2" onfocusout="focus_out(kt3_2,kt1_2,'kc3')">
@@ -375,7 +375,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                     </div>
                 </div>
@@ -395,7 +395,7 @@
                     <div class="card_back" id="fc1">
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Real">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                         <div class="col-sm-6 input">
                             <input type="number" name="T11" id="f1" onfocusout="focus_out(f1,f2,'fc1')">
@@ -404,7 +404,7 @@
                         </div>
                         <div class="col-sm-3 img">
                             <img src="./img/no_team.gif" alt="Barca">
-                            <span class="name1">Nasdfsme</span>
+                            <span class="name1">TBA</span>
                         </div>
                     </div>
                 </div>
