--- a/index.html
+++ b/index.html
@@ -577,7 +577,9 @@
                     <table id="table_3" class="display">
                         <thead>
                             <tr>
-                                <th>Team</th>
+                                <th style="
+                                width: 500px;
+                            ">Team</th>
                                 <th>Played</th>
                                 <th>Won</th>
                                 <th>Draw</th>
@@ -645,6 +647,8 @@
 
     <!-- custom JS -->
     <script src="custom.js"></script>
+
+    
 
 </body>
 
