--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
     <script src="confetti.js"></script>
     <!-- custom JS -->
     <script src="custom.js"></script>
-
+//test
     
 
 </body>
